apps/mission-ctrl/envs/staging/replica_count.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mission-ctrl
  namespace: prod
spec:
  replicas: 2
