apps/mission-ctrl/envs/staging/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mission-ctrl-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`mission-ctrl-staging.blaze64.xyz`)
      services:
        - name: mission-ctrl-service
          port: 80
