apps/mission-ctrl/envs/staging/ingress_route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mission-ctrl-ingress-route
  namespace: staging
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`mission-ctrl-staging.blaze64.xyz`)
